# drama-finder

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  compose.yaml  input.txt  kanban.md  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/core/: __init__.py  config.py  defaults.py  logging.py
app/db/: base.py  session.py
app/models/: __init__.py  base.py  episode.py  frame.py  ingest_job.py  scene.py  segment.py  series.py  shot.py
app/schemas/: __init__.py  ingest.py  manifest.py  search.py
app/services/: asr.py  gemini.py  ingest.py  manifest.py  media.py  queue.py  retrieval.py  scene_detection.py  storage.py
app/workers/: rq_worker.py  tasks.py
docs/: general-plan.md  react-migration-plan.md
docs/specs/: api-spec.md  defaults.md  evaluation-spec.md  gemini-batch-embedding-research.md  ingest-api-flow.md  ingest-pipeline-spec.md  job-lifecycle-spec.md  manifest-spec.md  repo-structure.md  retrieval-spec.md  schema-spec.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
manifests/: example-series.yaml
migrations/: env.py
scripts/: evaluate_retrieval.py  generate_shot_qa.py  node_stream_asr.mjs  run_api.py  run_worker.py
tests/: test_asr_service.py  test_defaults.py  test_demo_routes.py  test_evaluate_retrieval.py  test_gemini_service.py  test_ingest_pipeline_helpers.py  test_ingest_routes.py  test_ingest_service.py  test_manifest_service.py  test_queue_service.py  test_retrieval_service.py  test_rq_worker.py  test_segment_build_service.py  test_worker_tasks.py
(+16 files in other folders)
